src/test/deca/syntax/parser/invalid/invalid_float_format3.deca
// Parser test, invalid float format

{
    float x = 1e+1.5;
}